fix: add high-contrast styles for links and buttons (#155)
Please always provide the [GitHub issue(s)](../issues) your PR is for,
as well as test URLs where your change can be observed (before and
after):

Fix #153

Test URLs:
- Before: https://main--petplace--hlxsites.hlx.page/
- After: https://issue-153--petplace--hlxsites.hlx.page/

--- a/blocks/slideshow/slideshow.css
+++ b/blocks/slideshow/slideshow.css
@@ -69,7 +69,7 @@ main .slideshow-container {
 .control-button svg {
     width: 32px;
     height: 32px;
-    color: #FF7D5A;
+    color: var(--highlight-color);
 }
 
 .tab-bar-container > ol svg {
