--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@
   --color-blue-dark: #5773a8;
   --color-purple: #6f69a8;
   --color-purple-light: #978ce0;
+  --color-purple-light-alt: #8e8199;
   --color-dark-maroon: #5d3450;
   --color-red: #ff6662;
   --color-gold: #d8c46c;
@@ -406,11 +407,6 @@ main .section.well .default-content-wrapper > * {
   text-align: right;
 }
 
-[aria-hidden="true"],
-[aria-expanded="false"] ~ [role="group"] {
-  display: none;
-}
-
 .icon-user {
   color: #5773A9;
   height: 30px;
@@ -481,6 +477,7 @@ main .centered {
   text-align: center;
 }
 
+
 main .section.highlight {
   background: var(--background-color-light);
 }
@@ -488,6 +485,13 @@ main .section.highlight {
 main .section.highlight.strong {
   background: var(--background-color-dark);
   color: var(--text-color-inverted);
+}
+
+/* Accessibility styles */
+
+[aria-hidden="true"],
+[aria-expanded="false"] ~ [role="group"] {
+  display: none;
 }
 
 .sr-focusable {
@@ -589,6 +593,46 @@ a.sr-focusable:focus {
   font-size: var(--body-font-size-xxs);
 }
 
+@media (prefers-contrast: more) {
+  :root {
+    --high-contrast-color: #ab2400;
+    --highlight-color: #ab2400;
+    --color-blue: var(--color-purple);
+    --color-blue-light: var(--color-purple); 
+    --color-blue-dark: var(--color-purple);
+    --color-purple-light: var(--color-purple);
+    --color-dark-maroon: var(--color-purple);
+    --color-red: var(--color-purple);
+    --color-gold: var(--color-purple);
+    --color-green: var(--color-purple);
+    --color-magenta: var(--color-purple);
+    --color-mauve: var(--color-purple);
+    --color-orange: var(--color-purple);
+    --color-purple-light-alt: var(--color-purple);
+    --color-orange-transparent: var(--color-purple-transparent);
+    --color-blue-transparent: var(--color-purple-transparent);
+    --color-blue-dark-transparent: var(--color-purple-transparent);
+    --color-purple-light-transparent: var(--color-purple-transparent);
+    --color-red-transparent: var(--color-purple-transparent);
+    --color-gold-transparent: var(--color-purple-transparent);
+    --color-green-transparent: var(--color-purple-transparent);
+    --color-magenta-transparent: var(--color-purple-transparent);
+    --color-mauve-transparent: var(--color-purple-transparent);
+  }
+
+  .default-content-wrapper a {
+    text-decoration: underline;
+  }
+
+  .nav-sidebar a,
+  .nav-sidebar-links button[aria-controls]::before {
+    --highlight-color: var(--text-color-inverted);
+  }
+
+  .popular-tags a {
+    --link-color: var(--highlight-color);
+  }
+}
 
 .slick-arrow {
     position: absolute;
